--- a/Thesis/inleiding.tex
+++ b/Thesis/inleiding.tex
@@ -29,7 +29,8 @@ uit de databank te overlopen, vermits de databank ge\"indexeerd is op de annotat
 
 Omdat de tekst-gebaseerde aanpak in de praktijk dikwijls tekortschiet, is men op zoek gegaan 
 naar manieren om het zoeken te baseren op de visuele inhoud van de afbeeldingen 
-\cite{veltcamp:cbirs}. Zo zijn de \emph{content-based image retrieval} (CBIR) systemen ontstaan. 
+\cite{smeulders:cbir_end_of_early_years}. Zo zijn de \emph{content-based image retrieval} (CBIR) systemen 
+\cite{veltcamp:cbirs} ontstaan. 
 De algemene architectuur van een dergelijk systeem wordt ge\"illustreerd door
 figuur~\ref{fig:cbir}. Men maakt gebruik van een proces dat 
 \emph{(visual) feature extraction} genoemd wordt \cite{rui:image_retr}. Dit proces zet een afbeelding om in een 
