--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -85,10 +85,10 @@
   year =	{2005}
 }
 
-@article{manjunath:color_and_texture_descriptors,
+@Article{manjunath:color_and_texture_descriptors,
   author    = {Manjunath, B. S. and Ohm, J. R. and Vinod, V. V. and Yamada, A.},
   title     = {Color and Texture descriptors},
-  journal   = {IEEE Trans. Circuits and Systems for Video Technology},
+  journal   = {IEEE Transactions on Circuits and Systems for Video Technology},
   volume    = {11},
   number    = {6},
   pages     = {703--715},
@@ -104,4 +104,36 @@
 	year =		2000,
 	address =	{Brighton}
 }
-  
+ 
+@Article{smeulders:cbir_end_of_early_years,
+  author    = {Smeulders, A. W. M. and Worring, M. and Santini, S. and Gupta, A. and Jain, R.},
+  title     = {Content-Based Image Retrieval at the End of the Early Years},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume    = {22},
+  number    = {12},
+  pages     = {1349--1380},
+  month     = dec,
+  year      = 2000,
+}
+
+@Article{sharma:digital_color_imaging,
+  author    = {Sharma, G. and Trussell, H. G.},
+  title     = {Digital Color Imaging},
+  journal   = {IEEE Transactions on Image Processing},
+  volume    = {6},
+  number    = {7},
+  pages     = {901--932},
+  month     = jul,
+  year      = 1997,
+}
+
+@Article{wang:cbir_using_daubechies_wavelets,
+    author = "Wang, J. Z. and Wiederhold, G. and Firschein, O. and Wei, S. X.",
+    title = "Content-Based Image Indexing and Searching Using Daubechies' Wavelets",
+    journal = "International Journal on Digital Libraries",
+    volume = {1},
+    number = {4},
+    pages = {311--328},
+    year = 1997,
+}
+
